Package homepage update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "game-exp-react",
-  "homepage": "https://esalling.github.io/react-game-experience",
+  "homepage": "https://esalling23.github.io/react-game-experience/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
